--- a/4.0/Drucker/TicketDefault.cshtml
+++ b/4.0/Drucker/TicketDefault.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body class="ticket">
     <p>
-        @DateTime.Now.ToString("dd.MM.yyyy")
+        @DateTime.Now.ToString("dd.MM.yyyy  HH:mm") Uhr
     </p>
     <img runat="server" src="logo.jpg" />
     <h1>
