--- a/4.0/Liste/Vocatis.css
+++ b/4.0/Liste/Vocatis.css
@@ -1,22 +1,24 @@
-ï»¿
 /* redefine defaults */
 * {  margin: 0; padding: 0; border:none; overflow:hidden; }
-    
+
 html { height: 100%; }
 body
 {
-	/* fill complete frame */
+        /* fill complete frame */
     height: 100%;
-   
+
     /* text */
     font-family: Futura, Arial, sans-serif;
-    
+
     /* background */
     background-color: white;
 }
 
 
 /* list */
+
+h1 {
+}
 
 .list
 {
@@ -25,11 +27,13 @@ body
     position:fixed;
 }
 
-.list h1
+
+.list h1                    /* Überschrift */
 {
     height: 105px;
-    padding: 150px 0 0 15%;
-    font-size: 36px;
+    padding: 150px 0 0 0;
+    font-size: 44px;
+    text-align: center;
 }
 
 .list table
@@ -39,32 +43,33 @@ body
     padding: 0;
 }
 
-.list tr.spacer>td 
+.list tr.spacer>td
 {
     background-color: inherit;
     height: 75px;
     padding: 0;
 }
 
-.list td:first-child
+.list td:first-child                  /* Wartenr. */
 {
-    color: Black;
-    text-align: left;
-    padding: 0 0 0 15%
+    color: #29BB1A;
+    text-align: right;
+    margin: 0 0 0 0px;
+    padding: 0 0 0 50px;
 }
 
-.list td
+.list td                           /* Raumbezeichn. + Wartenr. */
 {
-    border-spacing: 0; 
+    border-spacing: 0;
     height: 108px;
-    padding: 0 15% 0 0;
+    padding: 0 50px 0 0;
     vertical-align: middle;
-    text-align: right;
-    font-size: 53px;
-    
+    text-align: center;
+    font-size: 96px;
+
     color: #29BB1A;
     font-weight:bold;
-    background-color:  #F2F2F2;
+    color: Black;
 }
 
 
@@ -73,11 +78,11 @@ body
     text-align:center;
     position: absolute;
     top: 10px;
-	bottom: 10px;
-	left: 10px;
-	right: 10px;
-	font-size: 120px;
-	background-color: rgb(240,240,240);
+        bottom: 10px;
+        left: 10px;
+        right: 10px;
+        font-size: 120px;
+        background-color: rgb(240,240,240);
     border: solid 8px  rgb(112,191,76);
     color: rgb(127,127,127);
 }
@@ -85,5 +90,23 @@ body
 
 .list .popup h3
 {
-    margin-bottom:150px;
+    font-size: 100px;   padding-top: 150px;
 }
+
+.list .popup h4
+{
+   font-size: 500px;
+   margin-top:50px;
+   color: rgb(50,50,50);
+}
+
+
+.number
+{
+}
+
+.room
+{
+
+}
+
