Layoutänderungen Vorlage Warteliste 4.0

--- a/4.0/Liste/List.cshtml
+++ b/4.0/Liste/List.cshtml
@@ -37,7 +37,7 @@ else {
     @Scripts.Render("~/Scripts/jquery", "~/Scripts/forms", "~/Scripts/vocatis.js")
 
     <h1>
-        Bitte warten Sie, bis Ihre Nummer erscheint:
+        Bitte warten Sie, <br /> bis Ihre Nummer erscheint:
     </h1>
     @ItemsList(list)
 
