--- a/4.0/DruckerMulti/Printer.cshtml
+++ b/4.0/DruckerMulti/Printer.cshtml
@@ -35,28 +35,28 @@
 
   @* wait popup is shown, while generating a new number *@
   <section id="waitPopup" style="display: none;">
-    <h3>Sie werden angemeldet im Fachbereich</h3>
-    <h2 data-name></h2>
-    <p>Bitte warten</p>
-    <p>...</p>
+    <h3 class="text1">Sie werden angemeldet im Fachbereich</h3>
+    <h2 class="text2" data-name></h2>
+    <div class="text3">Bitte warten</div>
+    <div class="text4">...</div>
   </section>
 
   @* take popup is shown, when the printout is ready *@
   <section id="takePopup" style="display: none;">
-    <h3>Sie werden angemeldet im Fachbereich</h3>
-    <h2 data-name></h2>
-    <p>Bitte entnehmen Sie Ihre Nummer</p>
+    <h3 class="text1">Sie werden angemeldet im Fachbereich</h3>
+    <h2 class="text2" data-name></h2>
+    <div class="text3">Bitte entnehmen Sie Ihre Nummer</div>
     <img src="Pfeil.png" alt="Pfeil">
-    <p>Sie werden aufgerufen.</p>
+    <div class="text4">Sie werden aufgerufen</div>
   </section>
 
   @* show popup shows the number on the screen *@
   <section id="showPopup" style="display: none;">
-    <h3>Sie werden angemeldet im Fachbereich</h3>
-    <h2 data-name></h2>
-    <p>Bitte merken Sie sich Ihre Anmeldenummer:</p>
-    <p class="number" data-number></p>
-    <p>Sie werden aufgerufen.</p>
+    <h3 class="text1">Sie werden angemeldet im Fachbereich</h3>
+    <h2 class="text2" data-name></h2>
+    <div class="text3">Bitte merken Sie sich Ihre Anmeldenummer:</div>  
+    <div class="number" data-number></div>
+    <div class="text4">Sie werden aufgerufen</div>
   </section>
 
 <script type="text/javascript">
