--- a/4.0/DruckerMulti/css/site.css
+++ b/4.0/DruckerMulti/css/site.css
@@ -24,9 +24,9 @@ h1 {
 h4 {
     text-align: center;
     color: rgb(6, 9, 184);
-    font-size: 3.5vw;     /* font-size: 2em; */
+    font-size: 3.5vw;
     color: rgb(6, 9, 184);
-    margin: 0 0 4vh 0;
+    margin: 0 -50px 4vh -50px;
 }
 
 ul {
@@ -45,20 +45,20 @@ li>a.btn {
     text-transform: uppercase;
 }
 .buttons-1 li>a.btn {
-    height: 50vh;
-    line-height: 50vh;
+    height: 9vh;
+    line-height: 9vh;
 }
 .buttons-2 li>a.btn {
-    height: 24vh;
-    line-height: 24vh;
+    height: 9vh;
+    line-height: 9vh;
 }
 .buttons-3 li>a.btn {
-    height: 15vh;
-    line-height: 15vh;
+    height: 9vh;
+    line-height: 9vh;
 }
 .buttons-4 li>a.btn {
-    height: 11vh;
-    line-height: 11vh;
+    height: 9vh;
+    line-height: 9vh;
 }
 .buttons-5 li>a.btn {
     height: 9vh;
@@ -83,19 +83,6 @@ li>a.btn {
 
 
 /* wait/take/show section styles */
-h2 {
-    text-align: center;
-    color: rgb(6, 9, 184);
-    font-size: 5.5vw;
-}
-
-h3 {
-    text-align: center;
-    color: rgb(6, 9, 184);
-    font-size: 5vw;
-}
-
-
 section {
     padding: 10vw;
     color: rgb(6, 9, 184);
@@ -108,14 +95,43 @@ section {
 }
 
 .number {
-    font-size: 16em;
+    font-size: 36vw;
+    font-weight:bold;
     color: rgb(6, 9, 184);
     text-align: center;
+    margin-top: -6vh;
 }
 
+.text1 {
+    text-align: center;
+    color: rgb(6, 9, 184);
+
+    font-size: 4vw;
+    margin: 4vh 0 3vh 0;
+}
+
+.text2 {
+    text-align: center;
+    color: rgb(6, 9, 184);
+    font-size: 6.2vw;
+    font-weight:bold;
+    margin: 0 -3vh 2vh -3vh;
+}
+
+.text3 {
+    text-align: center;
+    color: rgb(6, 9, 184);
+    font-size: 4vw;
+    font-weight:normal;
+    margin: 12vh 0 3vh 0;
+}
+
+.text4 {
+    font-size: 5vw;
+    margin: 4vh 0 0 0;
+}
 
 /*  Ticket  */
-
 body.ticket {
     font-size: 50px;
     text-align: center;
@@ -132,7 +148,6 @@ body.ticket {
     margin: 18px 0 5px 0;
     height:50px;
 }
-
 
 .ticket h1 {
     font-size: 60px;
