Cache beim Erzeugen der Nummer deaktiviert

--- a/4.0/DruckerMulti/Printer.cshtml
+++ b/4.0/DruckerMulti/Printer.cshtml
@@ -117,7 +117,7 @@
 
       $("[data-name]").text($(this).text());
       $("#waitPopup").show();
-      $.ajax({url:url, dataType:"json"}).done(function(data) {
+      $.ajax({url:url, cache: false, dataType:"json"}).done(function(data) {
         $("[data-number]").text(data["number"]);
         $("#showPopup").show();
         window.setTimeout(function() {
