Ticket Formatierung angepasst

--- a/4.0/DruckerMulti/Printer.cshtml
+++ b/4.0/DruckerMulti/Printer.cshtml
@@ -74,6 +74,7 @@
       $("[data-name]").text($(this).text());
     }).printTicket({
       legacy: false,
+      stripBody: false,
       beginPrint: function() {
         $("#waitPopup").show();
       },
