--- a/4.0/DruckerMulti/PrinterTicket.cshtml
+++ b/4.0/DruckerMulti/PrinterTicket.cshtml
@@ -5,22 +5,15 @@
     dynamic queueid = CommonGuidId.FromString(Request["queueid"]);
     dynamic catids = GuidIdsFieldInstance.ParseValue("",Request["catid"]).Value;
 }
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Vocatis</title>
-    <link href="@Href("css/site.css")" type="text/css" rel="Stylesheet" />
-</head>
-<body class="ticket">
-<header>
-    @DateTime.Now.ToString("dd.MM.yyyy  HH:mm") Uhr 
-</header>
-<img src="logo.png" />
-<h1>
-    @Vocatis.CreateTicket(queueid, catids).Number
-</h1>
-<footer>
-    Bitte warten Sie, bis Ihre Nummer auf dem Bildschirm erscheint!
-</footer>
-</body>
-</html>
+<section class="ticket">
+    <header>
+       @DateTime.Now.ToString("dd.MM.yyyy  HH:mm") Uhr 
+    </header>
+    <img src="logo.png" alt="Ersatztext">
+    <h1>
+        @Vocatis.CreateTicket(queueid, catids).Number
+    </h1>
+    <footer>
+        Bitte warten Sie, bis Ihre Nummer auf dem Bildschirm erscheint!
+    </footer>
+</section>
