--- a/4.0/DruckerMulti/PrinterTicket.cshtml
+++ b/4.0/DruckerMulti/PrinterTicket.cshtml
@@ -9,7 +9,7 @@
     <header>
        @DateTime.Now.ToString("dd.MM.yyyy  HH:mm") Uhr 
     </header>
-    <img src="logo.png" alt="Ersatztext">
+    <img src="Logo.png" alt="Ersatztext">
     <h1>
         @Vocatis.CreateTicket(queueid, catids).Number
     </h1>
