--- a/4.0/DruckerMulti/css/site.css
+++ b/4.0/DruckerMulti/css/site.css
@@ -152,27 +152,28 @@ section {
 }
 
 .ticket header {
-    font-size: 14px;
+    font-size: 14px; 
     text-align: center;
-    margin: 0 0 -20px 0;
+    margin: -0px 0px -10px 0px; 
+
 }
 
 .ticket img {
     text-align: center;
-    height:42px;
+     width: 80%; 
 }
 
 .ticket h1 {
-    font-size: 70px;
+    font-size: 75px;  
     font-weight:bold;
     text-align: center;
-    margin: -15px 0 -5px 0;
+    margin: -5px 0px 0px 0px; 
     padding: 0;
     color: black;
 }
 
 .ticket footer {
-    font-size: 12px;
+    font-size: 14px;
     text-align: center;
     line-height:16px;
     margin: 0 15px 0 15px;
