--- a/4.0/DruckerMulti/TicketDefault.cshtml
+++ b/4.0/DruckerMulti/TicketDefault.cshtml
@@ -8,16 +8,17 @@
     <title>Vocatis</title>
     <link href="@Href("css/site.css")" type="text/css" rel="Stylesheet" />
 </head>
+
 <body class="ticket">
     <header>
-       @DateTime.Now.ToString("dd.MM.yyyy  HH:mm") Uhr 
+       @DateTime.Now.ToString("dd.MM.yyyy - HH:mm") Uhr 
     </header>
-    <img src="Logo.png" alt="Ersatztext">
+    <img src="Logo.png" alt="Logo">
     <h1>
         @Model.Style["ticketnumber"].Value
     </h1>
     <footer>
-        Bitte warten Sie, bis Ihre Nummer auf dem Bildschirm erscheint!
+        Bitte warten Sie, bis Ihre Nummer auf dem Bildschirm erscheint! <br /><br /><br />
     </footer>
     <script type="text/javascript">
     window.onload = function () {
@@ -27,6 +28,8 @@
         window.setTimeout(function () { window.close() }, 1000);
     };
     </script>
+    
 </body>
+
 </html>
     
