änderung -code 6-40: definition von header, svg, .plattformlogo, h1 -code 91-110: definition von h2, svg,.notch(Dreieck), path -code: 119-121: definition textbereich -code: 127-133: img personenanzahl definiert -code:138-143: definition position img .personenanzahl

--- a/Vocatis-Vorlage/printer/styles/colors.scss
+++ b/Vocatis-Vorlage/printer/styles/colors.scss
@@ -1,10 +1,12 @@
 
 /* All colors defined here */
-$color-primary-background: rgb(0, 127, 200);
+$color-primary-background: #53668D;
+$color-primary-shadowred:#53668D;
 $color-primary-foreground: white;
-$color-secondary-background: grey;
-$color-primary-background: rgb(0, 127, 200);
-$color-secondary-foreground: black;
+$color-secondary-background:#d7d7d7;
+$color-secondary-foreground:#707173;
+$color-secondary-shadow: #c3c3c3;
+$color-primary-shadow:  #53668D;
 $color-highlight-background: red;
 $color-highlight-foreground: white;
 $color-common-background: $color-primary-foreground;
