--- a/Vocatis-Vorlage/printer/vorlage/App.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/App.cshtml
@@ -10,7 +10,8 @@
 </head>
 <body>
   <header>
-  > Wartezeit Live-Abfrage
+ <img src="plattform_01.png" class="plattform" alt="plattform">
+ <h1>Wartezeit Live-Abfrage</h1>
 </header>
 
 <section class="logo">
@@ -18,12 +19,19 @@
 </section>
 
 <section class="main">
-  <h1>%Warteschlange%</h1>
-  <div class="posinfo"></div>
-  <div class="notch"><svg xmlns="http://www.w3.org/2000/svg"><g><path d="M 0.0,0.0 20.0,20.0 40.0,0.0 Z" /></g></svg></div>
-  <div class="number">
-    Ihre Wartemarke:
-    <h2>52</h2>
+
+  <h2>Warteschlange</h2>
+  <article>
+   Es  befinden sich noch 10 Kunden vor Ihnen in der Warteschlange.<br><br> 
+   Ihre voraussichtliche Wartezeit beträgt ca. 50 Minuten. 
+   <br><br><br><br><br><br><br>
+   STAND: 13:50 Uhr</article>  
+
+<div class="posinfo"></div>
+<div class="notch"><svg xmlns="http://www.w3.org/2000/svg"><g><path d="M 0.0,0.0 10.0,10.0 20.0,0.0 Z" /></g></svg></div>
+<div class="number">
+<h3>Ihre Wartemarke:</h3>
+  <h4>KO 520</h4>
   </div>
 </section>
 
