--- a/Vocatis-Vorlage/printer/vorlage/Printer.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/Printer.cshtml
@@ -18,7 +18,9 @@
   @Scripts.Render("~/Scripts/jquery", "~/Scripts/forms", "~/Scripts/vocatis.js", "js/hammer.min.js")
 
   <header>
-    >
+  <img src="plattformlogo_01.png" 
+   class="plattformlogo" alt="plattformlogo">
+ 
     <h1>Wartenummer</h1>
   </header>
  
@@ -39,7 +41,7 @@
       <h3>Sie werden angemeldet im Fachbereich</h3>
       <h2 data-name></h2>
       <p>Bitte entnehmen Sie Ihre Nummer</p>
-      <img src="Pfeil.png" alt="Pfeil">
+      <img src="Pfeil.png" class="Pfeil" alt="Pfeil" >
       <p>Sie werden aufgerufen</p>
     </section>
 
