Warteliste: Gestaltungselemete platziert

--- a/Vocatis-Vorlage/printer/vorlage/Printer.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/Printer.cshtml
@@ -31,18 +31,22 @@
 
     @* wait popup is shown, while generating a new number *@
     <section id="waitPopup" style="display: none;">
-      <h3>Sie werden angemeldet im Fachbereich</h3>
-      <h2 data-name></h2>
-      <p>Bitte warten<br>...</p>
+      <p>Ihre Wartemarke wird gedruckt</p>
+      <div>
+        <img src="sanduhr.png" alt="wait" />
+      </div>
+      <p>Bitte entnehmen Sie ihre Wartenummer</p>
+      <img src="PfeilUnten.png" />
     </section>
 
     @* take popup is shown, when the printout is ready *@
     <section id="takePopup" style="display: none;">
-      <h3>Sie werden angemeldet im Fachbereich</h3>
-      <h2 data-name></h2>
-      <p>Bitte entnehmen Sie Ihre Nummer</p>
-      <img src="Pfeil.png" class="Pfeil" alt="Pfeil" >
-      <p>Sie werden aufgerufen</p>
+       <p>Ihre Wartemarke wird gedruckt</p>
+      <div>
+        <img src="sanduhr.png" alt="wait" />
+      </div>
+      <p>Bitte entnehmen Sie ihre Wartenummer</p>
+      <img src="PfeilUnten.png" />
     </section>
 
     @* show popup shows the number on the screen *@
