--- a/Vocatis-Vorlage/printer/styles/printer.scss
+++ b/Vocatis-Vorlage/printer/styles/printer.scss
@@ -3,40 +3,32 @@ body.printer
 {
     header
     {
-    display: block;
-    margin: 0 15vw;
-    height: 20vh;
-    width: 100%;
+        display: block;
+        margin: 0 15vw 4vh 15vw;
+        height: 16vh;
+        width: 100%;
+        
+        svg
+        {
+            height: 20vh;
+        }
+
+        .plattformlogo 
+        { 
+            height:100%;
+        }
+
+        h1 
+        {
+            display: inline;
+            text-transform: uppercase;
+            font-weight: 900;
+            margin: 0 0 0 2vw;
+        } 
     
-    svg
-	{
-        height: 20vh;
+        clear: both;
+        display: block;
     }
-
-    .plattformlogo 
-    { 
-        float: left;
-        height:80%;
-    }
-
-    h1 
-    {
-        float: right;
-        position: absolute;
-        text-transform: uppercase;
-        font-weight: 900;
-        margin: 21% 10% 0%;
-        width: 60%;
-    } 
-   
-
-    clear: both;
-    display: block;
-    }
-
-    
-    
-    
 
     section.info
     {
@@ -46,13 +38,14 @@ body.printer
     main, .main
     {
         position: relative;
-        margin: 0 15vw;
 
         section
         {
             position: absolute;
-            width: 100%;
+            left: 0;
+            right: 0;
             height: 70vh;
+            padding: 0 15vw;
             background-color: $color-common-background;
         }
     
@@ -65,20 +58,25 @@ body.printer
                 padding: 0;
             }
 
+            .single-button
+            {
+                display: none;
+            }
             ul.buttons-1
             {
-                li
+                .btn>div
                 {
-                    height: 40vh;
+                    height: 24vh;
+                }
+                .single-button
+                {
+                    display: initial;
                 }
             }
-            ul.buttons-2, ul.buttons-3
+            .btn.next-one>div:last-child div:nth-child(2) svg
             {
-
-            }
-            ul.buttons-4, ul.buttons-5, ul.buttons-6
-            {
-
+                opacity: 0.5;
+                .cls-2 { display:none; }
             }
             .btn
             {
@@ -86,7 +84,7 @@ body.printer
                 display: block;
                 margin: 2vh 0;
 
-                div
+                &>div
                 {
                     height: 8vh;
                     float:left;
@@ -97,15 +95,11 @@ body.printer
                         font-weight: bold;
                         font-size: 2.5em;
                     }
-                    svg, .notch
+                    &>svg, .notch
                     {
                         position: absolute;
                         margin-top: 2vh;
                         fill: $color-common-background;
-                    }
-                    path
-                    {
-                    width: 5%;
                     }
                    
                     &:first-child
@@ -124,24 +118,70 @@ body.printer
 						box-shadow: 1px 3px 1px $color-secondary-shadow;
                     }
 
-                    img.personanzahl
-
-                    {
-                        float: right;
-                        position: absolute;
-                        width: 6%;
-                        padding: 0% 1% 1% 1%;
-                    }
                     &:last-child
                     {
                         width: 25%;
-                        padding: 3% 10% 1% 3%;
                         float: left;
                         font-size: 0.5em;
                         background-color: $color-primary-background;
                         color: $color-primary-foreground;
                         box-shadow: 1px 3px 1px $color-primary-shadow;
-                        box-sizing: border-box;
+                        
+                        div 
+                        {
+                            float: left;
+                            &:first-child
+                            {
+                                width: 50%;
+                                height: 8vh;
+                                
+                                span
+                                {
+                                    box-sizing: border-box;
+                                    height: 8vh;
+                                    padding: 1vh 1vw;
+                                    display: table-cell;
+                                    vertical-align: middle;
+                                    text-align: center;
+                                }
+                            }
+                            &:nth-child(2)
+                            {
+                                width: 50%;
+                                height: 8vh;
+                                line-height: 8vh;
+                                text-align: center;
+                                
+                                /* personenanzahl */
+                                svg
+                                {
+                                    height: 80%;
+                                    vertical-align: middle;
+                                    .cls-1{fill:$color-primary-foreground;}
+                                    .cls-2{font-size:1em;}
+                                }
+                            }
+                            &:last-child
+                            {
+                                position: relative;
+                                width: 100%;
+                                height: 16vh;
+
+                                span
+                                {
+                                    text-align: center;
+                                    position: absolute;
+                                    bottom: 1vh;
+                                    right: 1vw;
+                                    left: 1vw;    
+                                }
+                                img
+                                {
+                                    height: 50%;
+                                    vertical-align: middle;
+                                }
+                            }
+                        }
                     }
                 }
 
@@ -152,13 +192,12 @@ body.printer
                     display: block;
                 }
 
-            
-           
+           }
+        }
 
-
-
-
-            }
+        section#waitPopup, section#takePopup
+        {
+            text-align: center;
         }
     }
 
