--- a/Vocatis-Vorlage/printer/vorlage/App.cshtml
+++ b/Vocatis-Vorlage/printer/vorlage/App.cshtml
@@ -11,7 +11,7 @@
 <body>
   <header>
  <img src="plattform_01.png" class="plattform" alt="plattform">
- <h1>Wartezeit Live-Abfrage</h1>
+ <h1><span style="text-transform:uppercase">Wartezeit</span>  Live-Abfrage</h1>
 </header>
 
 <section class="logo">
@@ -22,10 +22,10 @@
 
   <h2>Warteschlange</h2>
   <article>
-   Es  befinden sich noch 10 Kunden vor Ihnen in der Warteschlange.<br><br> 
-   Ihre voraussichtliche Wartezeit beträgt ca. 50 Minuten. 
-   <br><br><br><br><br><br><br>
-   STAND: 13:50 Uhr</article>  
+   <p>Es befinden sich noch <span style="font-weight: bold">10 Kunden</span> vor Ihnen in der Warteschlange.</p>
+   Ihre <span style="font-weight: bold">voraussichtliche</span> Wartezeit betr&auml;gt <span style="font-weight: bold">ca. 50 Minuten</span>.
+   <p id="three">STAND: 13:50 Uhr</p>
+   </article>  
 
 <div class="posinfo"></div>
 <div class="notch"><svg xmlns="http://www.w3.org/2000/svg"><g><path d="M 0.0,0.0 10.0,10.0 20.0,0.0 Z" /></g></svg></div>
@@ -33,6 +33,7 @@
 <h3>Ihre Wartemarke:</h3>
   <h4>KO 520</h4>
   </div>
+  <h5>Bitte rechtzeitig Wartebereich aufsuchen!</h5>
 </section>
 
 
