--- a/Vocatis-Vorlage/printer/styles/printer.scss
+++ b/Vocatis-Vorlage/printer/styles/printer.scss
@@ -158,7 +158,7 @@ body.printer
                                     height: 80%;
                                     vertical-align: middle;
                                     .cls-1{fill:$color-primary-foreground;}
-                                    .cls-2{font-size:1em;}
+                                    .cls-2{font-size:1em; color:$color-primary-background;}
                                 }
                             }
                             &:last-child
